update by ds config

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,18 @@
 /pyim
 /transient
 /tree-sitter
+.DS_Store
+/wiki
+/elpy
+/devdocs
+/org-persist
+/speed-type
+/share
+.youdao
+.emacs.desktop*
+.org-id-locations
+bookmarks
+history
+org-roam.db
+projects
+*.elc
